# api-esmaul-husna

./: .clever.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  db.py  main.py  pyproject.toml  requirements.txt  uncertainty.md
.github/workflows/: code-quality.yml
app/: database.py  db.py  exceptions.py  main.py
app/core/: language.py  pagination.py  schemas.py  utils.py
app/esma/: __init__.py  dependencies.py  exceptions.py  router.py  schema.py
app/surah/: __init__.py  dependencies.py  exceptions.py  router.py  schema.py
assets/: esmaul-husna.json  surah.json
esmaul-husna-bruno/: GET Root.bru  bruno.json  collection.bru
esmaul-husna-bruno/esmas/: Get all esmas.bru  Get esma SVG.bru  Get esma audio.bru  Get esma image.bru  Get one esma by his slug.bru  Get one esma by id.bru  Get one esma.bru  folder.bru
esmaul-husna-bruno/surah/: Get all surah.bru  Get one surah by id.bru  folder.bru
resources/: esmaul-husna.json
tests/: test_main.py
